# ViennaTypeListLibrary

./: .gitignore  CMakeLists.txt  README.md  VTLL.h  example.cpp  msvc.bat
include/: VTLL.h
tests/: CMakeLists.txt  testlib.cpp
